fix(waybar): icon too small

--- a/config/waybar/style.css
+++ b/config/waybar/style.css
@@ -3,7 +3,7 @@
 * {
   border: none;
   border-radius: 0;
-  font-family: "JetBrainsMono Nerd Font Mono";
+  font-family: "JetBrainsMono Nerd Font Propo";
   font-weight: bold;
   font-size: 16px;
   min-height: 0;
